objects/PMC_CPQ_ErrorMessageSettings__mdt.object
<CustomObject>
    <description>These error messages settings will be applicable for the Get Price Interface.</description>
    <fields>
        <fullName>PMC_CPQ_ConvertedErrorMessage__c</fullName>
        <description>The transformed/converted error message will be displayed here.</description>
        <label>Converted Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RegexExpression__c</fullName>
        <description>The LIKE Expression should be entered here.</description>
        <label>Regex Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SampleErrorMessage__c</fullName>
        <description>This is used to capture a sample of the types of messages that will be covered.</description>
        <label>Sample Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Error Message Settings</label>
    <pluralLabel>PMC_CPQ_IntegrationErrorMessageSettings</pluralLabel>
</CustomObject>